<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.joegamal.businessscreenapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/mountain_with_moon" />

        <ImageView
            android:layout_width="@dimen/image_joe_size"
            android:layout_height="@dimen/image_joe_size"
            android:layout_margin="@dimen/layout_margin"
            android:contentDescription="@string/joe_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/jo2" />

        <TextView
            android:id="@+id/moon_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/only_view"
            android:layout_alignRight="@+id/only_view"
            android:layout_centerVertical="true"
            android:text="@string/with_the_moon"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/moon_text_view"
            android:layout_toRightOf="@id/moon_text_view"
            android:text="@string/happy"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size" />

        <View
            android:id="@+id/only_view"
            android:layout_width="@dimen/line_width"
            android:layout_height="@dimen/line_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/line_margin_top"
            android:background="@android:color/white">

        </View>

        <TextView
            android:id="@+id/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/only_view"
            android:layout_margin="@dimen/contact_margin"
            android:text="@string/contact_head_line"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorAccent" />

        <TextView
            style="@style/customContactTextView"
            android:layout_marginTop="20dp"
            android:autoLink="phone"
            android:text="@string/phone_num" />

        <TextView
            style="@style/customContactTextView"
            android:layout_marginTop="70dp"
            android:autoLink="email"
            android:text="@string/mail" />

    </RelativeLayout>

</ScrollView>
